
TICKETS
	Fixed #1072: Bug - Uninstaller error - iMSCP::File::delFile: Unable to delete file imscp_network...
	Fixed #1095: Bug - IP usage interface is broken
	Fixed #1097: Enhancement - Allow to set public IP for server which are inside a private LAN
	Fixed #1099: Bug - SQL users which belong to an account which is being deleted are not removed from mysql table

------------------------------------------------------------------------------------------------------------------------
1.1.11
------------------------------------------------------------------------------------------------------------------------

2014-06-08: Laurent Declercq
	RELEASE i-MSCP 1.1.11

PLUGINS
	Changed: Plugin's backend scripts are now loaded from main plugin directory to avoid too many IO operations
	Fixed: Plugin db updates are not applied when a new plugin version is uploaded through the plugin UI
	Fixed: Unable to delete plugins which are uninstalled
	Updated: Plugin API to version 0.2.10

ENGINE
	Removed: Plugins directory (backend side of plugins are now loaded from main plugin directory)

------------------------------------------------------------------------------------------------------------------------
1.1.10
------------------------------------------------------------------------------------------------------------------------

2014-06-06: Laurent Declercq
	RELEASE i-MSCP 1.1.10

DATABASE
	Fixed: Wrong column definition in update r176

Distro
	Fixed: PHP5-FPM instance is lost in some contexts which causes errors 500 - Ubuntu Trusty Thar

GUI
	Changed: SQL passwords - Restrict allowed characters to printable characters from the ASCII table (not extended)
	Fixed: DNS resource records which are not owned by the custom DNS records feature must always be displayed
	Fixed: Domain alias name passed to the onBeforeAddDomainAlias|onAfterAddDomainAlias events should be in ASCII form

INSTALLER